@@ -10,7 +10,7 @@ AUX wine-1.5.26-winegcc.patch 1808 SHA256 91c1012059b93a421b2eae9f2ea46b7b327d6d
 AUX wine-1.6-memset-O3.patch 695 SHA256 1f04496713e8a401ba068702c5c3e104b18635bfb54808e5641a3c48a9b9bad4 SHA512 ad7231f8dedf98f9e9b91fcb8bbe72a716d78285127b0c33396de0b1e17a191f91f9a4a377c0e90671bb5f4e57bfb087ef7e80c9537c6c73b3c9bb90b3885968 WHIRLPOOL 91689c31054b896609493e2b0b4fe67e3d752d889f4ccae9c3e15229543341998809fd19a2040457e04fbdbd45505f0f2b49052844004193872713053d7239f8
 AUX wine-1.7.12-osmesa-check.patch 1722 SHA256 42648efa15040011ef868f92fd615924a83b5a30dab25505928226d8bc48159d SHA512 faca80f9747f3d7bfd05c3410bcccfaf17b3f397e30dd9ec382eccc326de346d195d6a184ec78e44b26d5e5e4b2af749ce58a0e6bad0b15a4fd1f2ea610d3124 WHIRLPOOL c5314849d15a53dc00af80f44249c10107b17825c4a2ab4510a5799b154bb1cdb516b3b632e1e959802588f673b9eac8ed6de2dfb59bde34acdd5b752115f695
 AUX wine-1.7.2-osmesa-check.patch 1740 SHA256 5264ac291435eb64c70cef4bdccbf8d4448472b4f014ab15ede35bcceebb6579 SHA512 4738a381923df7b45ea68092efb7ccb967907976d6d2f8bb0167af4211c377a73e296481b94092ac232f9ae09edf21447da92a134ebfff9b32acdd9e20340b95 WHIRLPOOL 95a90f8ff5a649833b39cb28de997c3b516cd09a53cf71d616c4fd412dfa6e71c47a1255a4d0597d85a62966cd9d6b9fae1c21c88e67d8650d31d414fca8fd42
-AUX wine-1.7.38-gstreamer-v5-staging-post.patch 1751 SHA256 3ceaf40825790b0747b010935db054ae48a9253b587cef5d034d3249d737aa2f SHA512 6ad86075c761c8b8d94ae34452f285f93b87efa7bb5f93c554cf100b1533ebb27b73ed3a6aef519cf10bf77d2a72b86ba9ae419f10892765156159f77541bfd1 WHIRLPOOL b3e050764f89ee77f834d1a22dd3cd22722c79d8eaf0e78df90c797f1fee36473141c7931817e560cece71ac89c65093649ed0c695c5872dc3eda1919871334b
+AUX wine-1.7.38-gstreamer-v5-staging-post.patch 1865 SHA256 ba96e043765f277f3a5be4606fcc75b6f93ef5697e22ae440117147c4585ec18 SHA512 4bb80a47b13b355ce2b18203fb281e2faa5210d3113794ff10f1c2780bdbdec0182ef642cbbc193827e14a4660b549af8cddb256e2c33bf196d477836a8c7fad WHIRLPOOL 85830f79dfb5623c8b56b29fad8062b605238fad7eec3953cfdd9fa33770dd564896190e60b490f0aea41bd37b3a52bd64cc65105eaa16d251f1ee492dd4b5bb
 AUX wine-1.7.38-gstreamer-v5-staging-pre.patch 1529 SHA256 891819135df197282e9e5ae4077f2e5ec29f2b50386a0cedaa0cc85633e31988 SHA512 62b55f7330939081aa3c854bfa57107a7e1d930e0ec2bda45fa66af887aec6a7663be1e36b5b6deeeec8f84aa70cbd8221ad83148e702716fecdf7d2c54ee7a1 WHIRLPOOL adc11e3ede16249da846d9980f681458827710db190a7b5e23f87bda8fe4945c655cf21f1dc0de0ce3145ae6d7606bebd4f598892a516f2b78d093c40a79f997
 DIST wine-1.2.3.tar.bz2 17651336 SHA256 3fd8d3f2b466d07eb90b8198cdc9ec3005917a4533db7b8c6c69058a2e57c61f SHA512 602ae802aa6f94c4498ccae96a67e355a8aa5cdc1e9c1e0f29482f45a9e7cc7af766ade9f2f1fef77ee77d5bbfc5f34cd110b95db244b8cff42998b5b0cf708d WHIRLPOOL 02ac95d8c86d0f2d870c8e4c4789c1bef1ef965f8bb186de23fd3a949126ba2aadd5791d1908bdf11d946d5dc5348b085881c2594cf1b407fa0df44c1990ecd9
 DIST wine-1.3.28.tar.bz2 19626794 SHA256 9a311124a1a911066ab9d3a742dda888487ee516a18eda946be105a1d1135a38 SHA512 b8fb881cf03dce1a40a9212bc6170858ddde38cd2fc282b455ab94cee7ee2e78f5043fee72df3b1e7566c29fb8c8a43726953a8bc5eb22d3ab7f869e6f4e9722 WHIRLPOOL acb6b8b978541e1b0f95f124e95ad9823e73590229515fd40e4e59d5af21c414c4824490710b436370b4d3fda3c477d6c4b626f89c6cc90e2fcf066355c3bee9
@@ -105,25 +105,25 @@ EBUILD wine-1.7.4.ebuild 13749 SHA256 0c4dbd04ae8dd76a987cff7b41c8713a874d81bcf1
 EBUILD wine-1.7.8.ebuild 14079 SHA256 834e1a1d3f52e88f56b1d039d786e135a2b9841846b74b76a344e9538690cdeb SHA512 25d96cb05fd39d185afb9c3623fe6e7d9179b387e90714d126e9efd538beaf4be8f6c80971ed3b8217bfeecbe366f82bd1f4347abb30aceb9a46393f9551b8b9 WHIRLPOOL 7e05523f1e531faa813881fc3f0c00a561830c3db02928b164fd0b51167dfdc287cdc7a1b85a5c2095890937a36025075472b33291d8aa498e694ea0f4d5d80f
 EBUILD wine-1.7.9.ebuild 14079 SHA256 23fcbdbc8a3123ba66b5a9ff9b0eb8939c45da7fd520cbb3cea29c96b47462a7 SHA512 7b199fcc1ddd9b9a9a23633906c371e8a083ab66c4c62c7c50e90121e78181cdd56aba0705274ad6df93dcb06002d21c0040a6fbc2562b15a0f22a32becc969d WHIRLPOOL 4d0ee99f9b0c81e57dff869892a96d9bf0cfda7585dff1de68657d62ef987e8fed982cc5b15035299b5b122720c664b187336d7ea11e0a904dc790ad60c74b60
 EBUILD wine-9999.ebuild 16725 SHA256 53f4bb86af11d1eba993ab6073d17ca32b2c90fb8d0e40449b9b3b30ef0f5bd8 SHA512 2879fc93ecd316ddf270e27bdc5dd1441fbf632e1dc410f2017250c7ace479800e93f12ad67e1a244ba5a45295eaa487cdec0d5b88e93726b2297cf2bbfa0e5c WHIRLPOOL 782318d916ce2e043e12f72be73d7c7375016c8437dd0aef4ac8bf0a8720a947f35f9e03119271335937a9398f38f0532af154ae56409bfc46038979b688f2da
-MISC ChangeLog 28071 SHA256 dcf59596d26e0cb24658b002767b054603bda39aa0e56f603e69c5569055a5fa SHA512 70f8ce1fcaa64054ab932da4bdf3ed2924b9273d5a85dbab092ce008ceaa1adcd7bff486be3792108f633774832b0aa8a9d1335ed94f0a783781914b9899001c WHIRLPOOL 5b52afe1ebc60a41ba80dc249914b21cd33584606a2254a3ae86b2fbec62643bcc48294ff14971b27e6716a6568cc8c077ea30d53a61d884bb69d1d422c9412a
+MISC ChangeLog 28303 SHA256 fee381492c2d10f449bc53e67fcaf29833709d1e58185a742ed67f001d76aa28 SHA512 bb34d9d6b0a21ff9ff9486a448437c0685e818139d5f6b377d35576d77172cece8edf594e67ad0b98a4f97110eafb62aa7b0605fa3b6193210b417b2ce6cf697 WHIRLPOOL 66c7dcf6571563f15ecda110b023dab8031db3fff107b0c2f9dad5d1d2d9e795f72e79c11b6cce9c61030090eb9cbc32e16d4b089824d8161205b0b14e6b4bd7
 MISC ChangeLog-2012 100362 SHA256 8e70fc54e7945c1f41e3e0b64fef6b9a7fe89acdaf8c79a06a16048fe8d2e26c SHA512 ca875e847ba100e1f19774b31a2b45a81d776275e3d11944be8a7b01dfcdbf4265b1a340d691bc4fe4054fea006059a06ed52bc0516b1f8b44a1772a1c813278 WHIRLPOOL 36ec708601a25cb8fa93b471112538480b6ef82cc4e6703b3d045f883078b49209ceaeef7bafa8417b881c2d11df84df9c83d1985d0d687a11f3db3de5abb014
 MISC metadata.xml 2753 SHA256 e52a7b0f8c694e3fb8624f80f05fbd19ad0e3e9af654fac7e5ada9596361de3f SHA512 1de3e621614dfd1529e158743c6959834f10a885c0e5efc74bad445ec5930bfd86b999122f5a978f0fc0ac8e64927a02919fb766fe6a701362f9e3e4fe8ffc94 WHIRLPOOL b838c0d1beb4978ad96e280a1a77625c26adb90f0e0f3484acd49c21fa9a2182237ac1d723badafe23f5d82123e187c629ccdc0385cdc6347e7c0c8bfa5921a9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU+/OJXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU/KjYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
-OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNMZYP/AoG0EKXHTn4z7ymukOdH2o+
-bm0vB2aU+GKlIxTFzUQ4SEZxPGEQDlyfbntRXtLC4peKh/TK7Kl386LQARczi49s
-VC/tR8OCd4VJnfse4YiYr3m7PahXa59Y0zXB4i1581cQQZn9zMvyUH/H1Xl9Kbdy
-5KptShz/WDUWxkd4yPJayGClyJSyG88GrSMIbzZXjgx0Uwm1QGvk7XpZYEtCEI1X
-+sLGhRMEl+LGMYSt2YTZpLKJaUCB0KglJgre7k4qYzBf47rjRyTgvEvBh8rvR0qP
-rmbRpnRbaYThM0HgYPZY19sjjCLLTl9ySdaOirGssx9k5lCN5FiBL7ri29pJAIFl
-uYWe4LgmkTBhLgCzXUWpFj/PI2dWtEzuxXUnHiJOA3N3lWFcsG+07cM/IWCMdVg6
-AYo2xRs5NgrOiw6y75gxF7QHzVEKccjhbwQR/wAgtkZPJmV+7jyYTl6Py3Y3pXja
-samJQJiEbjgthcVuFsWOJapuZG5OgJq1WsPIQLDWSel07xXW46YRaFiJoq8wf325
-dYwYWnPE+LdOIhaJlh7NgPbIEEs04KxSyh6WCOaTair31xyObj/8VblILxjpO9iy
-FR2NCpdV+PRtl0FZ96cSNmvlZFzbZ4+PYNJscspVWoSGokU0M5iSy4/C1S+Qe1G3
-1YgOeG6X+UBcspqG9p3C
-=dmUH
+OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyNXeEP/3NIqMCZQ8pv1RW701OIQLtp
+2THoMzA78+V1Y4De1+FH4snC7PC3kG60XbVuHCID5v2dyqRjkYpAmGPeAiu8joKE
+goE9FKmjW4Q5rUyxa2vxWj60GeSRxkaskzxDY1jzrLR8F1+UHHPuB+5tGScFnCz7
+tApdsIF5Ks267b+UA0L8XPjMftF3CQ6PRJWbS6Zv8gqqyRbzNZgR4RZG95zADIvv
+GaBAyrQUgY3bpm0u0iRAUBSQcQbM4jxvbDwbVVH/iaLy3p0qm/X+ab9p++xBRYtO
+jXp5z2g1Jm+07NA8F4oiudYTC2d47OZHhQjOVNk7E2Xh+/vxnbIIyZQEf1mmN4Lb
+PWEs+kQadMJMp/lGaZAEiMu+hdKnPitMlB0Bz3XmMEy3pUWxtpPojTNJi048KHTs
+FCSgB4SysdZCc/gPfiwUeZeNu3ykkUvJHQhbavE3Rj/B5ZQyuLlKJdUrQLyk8bcb
+hySpxPm0ZzSRZA571V+CqH5NgGKS9pvhqqFRUHRXrZ4KkO6vqxOYf6v9r3jTeQav
+5VYZNDmWZE/ZY+WihxZ0deU8YLdkgm1j5wLDv71p4KEeaNKm5F71g2yfvDXIuZlP
+nAfUPyA8u6PU3iu4c5QlgSeLSxhGpSMt7pbhbqEXwqsDo8F8+6fZ+VS3zodmk9qc
+O0rhGHQN+zkVNCjYukpK
+=4Fwc
 -----END PGP SIGNATURE-----
