@@ -25,26 +25,28 @@ diff --git a/dlls/ntdll/thread.c b/dlls/ntdll/thread.c
 index 936cabe..98e679e 100755
 --- a/dlls/ntdll/thread.c
 +++ b/dlls/ntdll/thread.c
-@@ -459,6 +459,7 @@ static void exit_thread_common( int status )
- {
- #ifndef __linux__
+@@ -459,6 +459,8 @@ static void exit_thread_common( int status )
      static void *prev_teb;
-+    sigset_t sigset;
      TEB *teb;
  #endif
- 
-@@ -495,6 +496,11 @@ static void exit_thread_common( int status )
-             signal_free_thread( teb );
-         }
-     }
++
++    sigset_t sigset;
+
+    if (status)  /* send the exit code to the server (0 is already the default) */
+    {
+--
+@@ -498,6 +499,11 @@ static void exit_thread_common( int status )
+ #else
+     reap_thread(NtCurrentTeb());
+ #endif
 +
 +    sigemptyset( &sigset );
 +    sigaddset( &sigset, SIGQUIT );
 +    pthread_sigmask( SIG_BLOCK, &sigset, NULL );
 +    if (interlocked_xchg_add( &nb_threads, -1 ) <= 1) _exit( status );
- #else
-     reap_thread(NtCurrentTeb());
- #endif
+
+    close( ntdll_get_thread_data()->wait_fd[0] );
+    close( ntdll_get_thread_data()->wait_fd[1] );
 -- 
 2.3.1
 
